Update mkdocs link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - API Documentation: api.md
+  - API Documentation: api_documentation.md
 
 plugins:
   - search
