--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,8 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - API Documentation: api_documentation.md
+  - Agents API Documentation: api_documentation.md
+  - Facebook API Documentation: Facebook.md
 
 plugins:
   - search
